K8-resources/EBS-dynamic.yaml

apiVersion: v1
kind: Pod
metadata:
  name: ebs-dynamic-pod
  labels:
    app: ebs-dynamic-app
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: nginx-html

  volumes:
  - name: nginx-html
    persistentVolumeClaim:
      claimName: roboshop-ebs-pvc-dynamic
