K8-resources/efs-static.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-pod-static
spec:
  containers:
  - name: app
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: efs-volume
  volumes:
  - name: efs-volume
    persistentVolumeClaim:
      claimName: efs-claim-static # PVC created above
