K8-resources/multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer-pod
  labels: # labels can be anything as key vakue pair used for identification of the pod
    app: multicontainer-app

spec:
  containers:
  - name: nginx
    image: nginx
  - name: almalinux
    image: almalinux
    command: ["sleep","100"]
