K8-resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  #creates in namespace roboshop-dev
  namespace: roboshop-dev
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports: 
    - containerPort: 80
  - name:
