K8-resources/podDisruptionBudget.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: nginx  
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    app: myapp  
spec:
  containers:
  - name: myapp-container
    image: nginx
