K8-resources/secrets.yaml
apiVersion: v1
kind: Secrets
metadata: 
  name: secrets-demo
type: Opaque
data:
#Add your key-value pairs here
  username: cm9ib3Nob3A=   # base64 encoded value of 'roboshop
  password: U29tZVBhc3N3b3JkMTIz  # base64 encoded value of 'SomePassword123'

apiVersion: v1
kind: Pod
metadata:
  name: secret-pod
spec:
  containers:
  - name: nginx
    image: nginx
