K8-resources/EBS-static.yaml

apiVersion: v1
kind: Pod
metadata:
  name: ebs-static-pod
  labels:
    app: ebs-static-app
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: nginx-html
  nodeSelector:
    topology.kubernetes.io/zone: us-east-1a # Ensure the pod is scheduled in the same zone as the EBS volume
  volumes:
  - name: nginx-html
    persistentVolumeClaim:
      claimName: static-ebs-pvc

---
# an lb service to access the pod
apiVersion: v1
kind: Service
metadata:
  name: ebs-static-service
spec:
  selector:
    app: ebs-static-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
