K8-resources/service-np.yaml
apiVersion: v1
kind: Service
metadata: 
  name: service-demo-nginx
spec:
  type: NodePort
  selector: 
    app: roboshop
    environment: dev
    type: frontend
  ports:
  - protocol: TCP 
    port: 80 # service port
    targetPort: 80 # container port


---
apiVersion: v1
kind: Pod
metadata:
  name: service-demo-np
# Make sure that the labels in the pod match the selector in the service.
  labels:
    app: roboshop
    environment: dev
    type: frontend
spec: 
  containers:
  - name: nginx
    image: nginx
